# realtime-memory-forensics

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  compile_commands.json  flake.nix  ruff.toml  run_tests.sh  structure.md
bindings/: rmf_py_bindings.cpp  rmf_py_tests.cpp
examples/: basicBFS.cpp  mediumBFS.cpp  mostCommonPointers.cpp  processReader.cpp  scanner.cpp  scanner.py
gui/include/: graph_manager.hpp  gui_examples.hpp  process_manager.hpp  scan_manager.hpp  script_manager.hpp
gui/src/: gui.cpp  gui_examples.cpp  main.cpp  memory_graph_viewer.cpp  process_manager.cpp
include/: MTQueue.hpp  abbreviations.hpp  analysis_threadpool.hpp  binaryStreamFormatting.hpp  builds.hpp  concepts.hpp  core.hpp  core_wrappers.hpp  executor.hpp  globals.hpp  gui.hpp  gui_types.hpp  log.hpp  logger.hpp  logs.hpp  maps.hpp  mem_anal.hpp  mem_anal_instructions.hpp  memoryMap.hpp  memoryRegion.hpp  memory_graph.hpp  memory_graph_viewer.hpp  memory_map.hpp  memory_region.hpp  multi_threading.hpp  obtainMemory.hpp  operations.hpp  patternAnalysis.hpp  permissions.hpp  python_embed.hpp  regionProperties.hpp  region_pool.hpp  region_properties.hpp  rmf.hpp  run_test.hpp  script_manager.hpp  scripting_engine.hpp  snapshot_analysis.hpp  snapshots.hpp  test_helpers.hpp  (+6 more)
include/backends/: core.hpp  ibackend.hpp  mt_backend.hpp
include/data/: maps.hpp  numerics.hpp  refreshable_snapshots.hpp  snapshots.hpp
include/utils/: MTQueue.hpp  logs.hpp
lib/: memory_map.cpp  memory_region.cpp  region_properties.cpp
logger/: logger.cpp  logger.hpp
pythonTests/: analyzerLoop.py
python_embed/: python_embed.cpp
rmf_py/: __init__.py
src/: analysis_threadpool.cpp  core.cpp  core_wrappers.cpp  graph_manager.cpp  gui.cpp  gui_examples.cpp  log.cpp  logger.cpp  main.cpp  maps.cpp  mem_anal.cpp  mem_anal_instructions.cpp  memory_graph.cpp  memory_graph_viewer.cpp  memory_map.cpp  memory_region.cpp  multi_threading.cpp  operations.cpp  python_embed.cpp  region_pool.cpp  region_properties.cpp  rmf.cpp  run_test.cpp  scan_manager.cpp  scripting_engine.cpp  snapshots.cpp  test_helpers.cpp  tests.cpp  threadpool.cpp  types.cpp  utils.cpp
src/backends/: core.cpp  mt_backend.cpp
src/data/: maps.cpp  snapshots.cpp
tests/: 00-testLogging.cpp  000-loggingTest.cpp  000-logging_test.cpp  001-multithreading_test.cpp  001-readingMapsTest.cpp  002-multithreading-integrity-test.cpp  002-snapshotTest.cpp  003-multithreading_integrity_test2.cpp  003-snapshotTestWithThreading.cpp  004-changingTest.cpp  004-multithreading_test_3.cpp  005-multiThreadingTestV2.cpp  005-spinningtest.cpp  006-readingStringsTest.cpp  007-changingFloats.cpp  008-mt_backend_test.cpp  009-scripting_engine_parsing_test.cpp  01-basicRegionTest.cpp  01-mappingAndRegionPropertiesTest.cpp  010-maps_parsing_test1.cpp  011-snapshotComparingTest1.cpp  012-snapshotUncomparingTest.cpp  014-findExactNumeric.cpp  016-findPointersTest.cpp  02-readingMapsTest.cpp  02-snapshottingAndComparing.cpp  020-multithreadedComparisonsTest.cpp  021-multithreadingAPIV2Test.cpp  03-changingMemoryTest.cpp  03-stringLikeTest.cpp  030-memoryGraphInitialTest.cpp  04-memoryMapChangingTest.cpp  05-pointerFindingTest.cpp  06-doubleFindingTest.cpp  07-linkedListFindingTest.cpp  CMakeLists.txt  binaryStreamFormattingTest.cpp  changingRegionIdentificationTest.cpp  readingMapsTest.cpp  sampleProcess.cpp  (+5 more)
tests-old/: 002-multithreading-integrity-test.cpp  003-multithreading_integrity_test2.cpp  006-toomanytasks.cpp  013-findStringsTest.cpp  015-findNumericRange.cpp  020-multithreadedComparisonsTest.cpp  021-multithreadingAPIV2Test.cpp  CMakeLists.txt
tests/integration/: analyzerIntegraction.cpp  memoryGraphDataIntegration.cpp
tests/unit/: analyzer.cpp  batcherMemoryScanning.cpp  batcherPerformance.cpp  breakIntoChunks.cpp  components.cpp  filters.cpp  findNumericChanged.cpp  findNumericExact.cpp  findString.cpp  memoryGraph.cpp  memorySnapshot.cpp  parseMaps.cpp  pythonAnalyzer.cpp  pythonBindings.cpp  pythonInterpreter.cpp  pythonTesting.cpp  structRegistry.cpp  testProcess.cpp  threadPool.cpp
